syntax = "proto3";


package hero.v1;

service HeroCRUDService{ 
    rpc Add (AddRequest) returns (AddResponse) {}
}

message Hero {
    string name = 1;
    int32 id = 2;
    int32 power = 3;
    int32 hp = 4;
}


message Heros {
    repeated Hero heros = 1;
}
    
message Message {
    string test = 1;
}

message GetRequest {
    string name = 1;
    int32 id = 2;
  }
  
  message GetResponse {
    repeated Hero heroes = 1;
  }
  
  message AddRequest {
    string name = 1;
    int32 power = 2;
    int32 hp = 3;
  }
  
  message AddResponse {
    Hero hero = 1;
  }


    message DeleteRequest {
        string name = 1;
        int32 id = 2;
    }
    
  message DeleteResponse {
   Hero hero = 1;
  }

    message UpdateRequest {
        string name = 1;
        int32 id = 2;
        int32 power = 3;
        int32 hp = 4;
    }

    message UpdateResponse {
        Hero hero = 1;
    }

